--- a/firststyle.css
+++ b/firststyle.css
@@ -12,7 +12,7 @@ margin: auto;
 }
 
 body {
-background-image: url(imagePAth/henrycoe.JPG); /file:///Users/Jessica/Backpacking/henrycoe.JPG/
+background-image: url(imagePAth/henrycoe.jpg); /file:///Users/Jessica/Backpacking/henrycoe.jpg/
 
 -moz-background-size: cover;
 -webkit-background-size: cover;
